--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "./node_modules/.bin/gulp",
     "preinstall": "if [ \"$NODE_ENV\" != \"development\" ] && [ -z \"$CI\" ]; then npm install pm2 -g  && pm2 install pm2-logrotate; fi",
+    "postinstall": "gulp",
     "start": "pm2 start --attach process.yml && pm2 logs all",
     "test": "echo TODO"
   },
